# hand-eye2

./: .gitignore  CMakeLists.txt  README  chessboard_eih_test.cpp  chessboard_eth_test.cpp  chessboard_test.cpp  handeye-calib.cpp  main.cpp  pop_ideas.cpp  veri.cpp
src/: CMakeLists.txt  calib_intrinsics.cpp  calib_intrinsics.hpp  matrix_util.cpp  matrix_util.hpp
